--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="progress" class="fixed top-0 right-0 w-1 z-50 hfull bg-yellow"></div>
 
     <!-- <first-page></first-page> -->
-    <div id="page-1" class=" relative z-50">
+    <!-- <div id="page-1" class=" relative z-50">
         <section class="bg-black h-screen  flex  justify-center items-center">
             <h1
                 class="text-white text-[35px] colg:text-[45px] font-thin flex max-colg:flex-col leading-9 text-center gap-3">
@@ -27,10 +27,10 @@
                 <span id="word-3" class="block opacity-0 transition-all duration-1000 translate-y-4">Excellence</span>
             </h1>
         </section>
-    </div>
+    </div> -->
 
     <!-- <second-page></second-page> -->
-    <div id="page-2" class="bg-black hidden relative z-50">
+    <!-- <div id="page-2" class="bg-black hidden relative z-50">
         <section class=" h-screen flex items-center justify-center">
             <div id="page2MainDiv"
                 class="relative w-65 flex justify-center items-center
@@ -43,10 +43,10 @@
                 </div>
             </div>
         </section>
-    </div>
+    </div> -->
 
     <!-- <main-page></main-page> -->
-    <div id="main-page" class="relativ -z-50 hidden ">
+    <div id="main-page" class="relativ -z-50 hidde ">
         <!-- <nav></nav> -->
         <nav
             class="xl:mix-blend-difference h-22.5 xl:h-35.5 px-7.5 2xl:px-15 w-full flex justify-between items-center fixed z-60   bg-black">
@@ -88,7 +88,7 @@
             <div>
                 <!-- <nav-meanu>-->
                 <div id="nav-meanu-div"
-                    class="bg-black h-screen w-full fixed opacity-0 -z-10 transition overflow-hidden">
+                    class="bg-black h-screen w-full fixed opacity-0 pointer-events-none  -z-50 transition overflow-hidden">
                     <div class="grid grid-cols-7  h-full container mx-auto px-7.5 xl:px-32.5">
                         <!-- 1 column -->
                         <div id="nav-meanu-column-1-items"
