main page hidden on loading

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <!-- <main-page></main-page> -->
-    <div id="main-page" class="relativ -z-50 hidde ">
+    <div id="main-page" class="relativ -z-50 hidden ">
         <!-- <nav></nav> -->
         <nav
             class="xl:mix-blend-difference h-22.5 xl:h-35.5 px-7.5 2xl:px-15 w-full flex justify-between items-center fixed z-60   bg-black">
